# raytracer-gpu

./: .gitignore  Cargo.toml  README.md  flake.nix  image.ppm  rust-toolchain.toml
runner/: Cargo.toml  build.rs  image.ppm
runner/src/: main.rs  scene.rs  shader.wgsl
shader/: Cargo.toml
shader/src/: bvh.rs  data.rs  lib.rs  material.rs  rand.rs  ray.rs  sphere.rs  traits.rs
